860t5d37a fix inconsistent gap

--- a/src/styles/templates/_p3-site-smaller.scss
+++ b/src/styles/templates/_p3-site-smaller.scss
@@ -337,7 +337,7 @@
     }
 
     .product-form {
-        @apply mt-[1rem] lg:mt-2;
+        @apply mt-3 lg:mt-4;
         .quantity-box {
             @apply lg:px-2;
     
